Refactor project structure and update documentation for deployment
- Updated .gitignore to include additional files and directories
- Removed outdated DATABASE_SETUP.md and PRICE_HISTORY_GUIDE.md
- Enhanced README.md with new features and setup instructions
- Added DEPLOYMENT.md for detailed deployment steps on Railway and Vercel
- Created PRE_DEPLOYMENT_CHECKLIST.md for readiness verification
- Updated backend and frontend environment variable templates
- Configured railway.json for Railway deployment
- Modified backend package.json scripts for build and deploy processes
- Changed Prisma schema to use PostgreSQL
- Removed unnecessary setup scripts and test files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,12 @@
 # Environment variables
-NODE_ENV=development
-PORT=5000
+NODE_ENV=production
+PORT=8000
 
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/pricetracker?schema=public"
+# Database (Railway PostgreSQL)
+DATABASE_URL="postgresql://username:password@host:port/database"
 
 # JWT
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-very-long-and-secure
 JWT_EXPIRE=7d
 
 # Email Configuration (for notifications)
@@ -16,5 +16,5 @@ EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
 
 # App Configuration
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://your-vercel-app.vercel.app
 SCRAPING_INTERVAL_HOURS=24
