--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@
 NODE_ENV=development
 PORT=5000
 
-# Database (SQLite for development)
-DATABASE_URL="file:./dev.db"
+# Database (PostgreSQL URL format but will be overridden by Railway)
+DATABASE_URL="postgresql://username:password@localhost:5432/pricetracker?schema=public"
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-very-long
