feat: Update .env.example with correct production API URL and add debug logs for API base URL

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,5 +2,8 @@
 
 # Backend API URL
 # For development: http://localhost:5000/api
-# For production: https://your-railway-backend.railway.app/api
-REACT_APP_API_URL=https://your-railway-backend.railway.app/api
+# For production: https://your-project-name.up.railway.app/api
+# 
+# IMPORTANT: Replace with your actual Railway URL
+# Example: https://pricetracker-backend-production.up.railway.app/api
+REACT_APP_API_URL=https://your-project-name.up.railway.app/api
