--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "PriceTracker - Amazon Price Tracking",
+  "short_name": "PriceTracker",
+  "description": "Track Amazon prices and get alerts when prices drop. Never miss a deal again!",
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#059669",
+  "background_color": "#ffffff",
+  "orientation": "portrait-primary",
   "icons": [
+    {
+      "src": "/favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
@@ -18,8 +30,6 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "categories": ["shopping", "utilities", "productivity"],
+  "lang": "en-US"
 }
