feat: Add Vercel Analytics for improved tracking and performance monitoring

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "bugs": {
     "url": ""
   },
-  "homepage": ""
+  "homepage": "",
+  "dependencies": {
+    "@vercel/analytics": "^1.5.0"
+  }
 }
